--- version 0.3 ---

Added "billboard" exporting. Requirements:
    ID Property "irrb|inodetype=billboard".
    UV Mapped Plane (quad) with a single texture.

Added "skybox" exporting. Requirements:
    ID Property "irrb|inodetype=skybox".
    UV Mapped Cube with 6 separate textures.
    Quad Faces with normals facing in.

Std attributes & user data now extracted from Blender ID Properties ['irrb']

Added -a (archive) cmd line parm to imeshcvt. "Create Binary Mesh" option
_always_ passes the relative base to imeshcvt.

Added light debug data to iwalktest - color and line direction for
directional lights. F2 - toggles visual.

bug fix - fixed Exception when mesh buffer exceeds 64k index limit.

bug fix - fixed directional light rotation calculation.

bug fix - meshes that are parented to a camera now have the correct
rotation and position written to the scene file.

bug fix - arbitrary rotations on meshes now working (including nested
parents).

fixed bug that prevented exporting non mesh objects when "Selected Meshes
Only" option was selected.

changed "Copy Textures" functionality to "Save Packed Textures". When selected,
only packed textures will be saved to the user specified directory.

removed $filename/$fullpath options for mesh/texture references.  _all_
file references now use relative paths - relative to the location 
specified in "Relative Base".

gui reorg - option buttons moved to the top.

bug fix - blender textures that have been loaded using relative paths are
now properly located by irrb.

added scene file name and path to iwalktest window caption.

iwalktest updated to use "lsl" config script.

shape debug info to log.

meshes that contain shape keys will have the "basis" mesh (1st) exported
as the base geometry regardless of the active key selected.

--- version 0.2 ---
Initial release